横方向サイズを広げる

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       </div>
     </form>
     <h2 class="ui header">For Scroll</h2>
+    <pre style="overflow: visible;">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</pre>
     <p>a</p>
     <p>a</p>
     <p>a</p>
